DB connection added